# bionemo-framework

./: .gitmodules  .pre-commit-config.yaml  .secrets-nb.baseline  .secrets.baseline  CODEOWNERS  Dockerfile  Dockerfile.arm  README.md  all_requirements.txt  artifact_paths.yaml  brca1_zero_shot_compare_logits.ipynb  download_artifacts.py  install_script.sh  justfile  launch.sh  pyproject.toml  requirements-cve.txt  setup.py  slurm-run.py  versions.json  zeroshot.ipynb  zeroshot_brca_1.ipynb  zeroshot_brca_v3_parity.ipynb
.devcontainer/: devcontainer.json
.github/: .codecov.yml  dependabot.yml
1.10/: bibliography-fw.html  bionemo-fw-for-model-training-fw.html  blog.html  contents.html  data-module-fw.html  deep-dive-esm1-pytriton-inference.html  dwnstr-task-validation.html  faq-fw.html  index.html  initialization-guide.html  lora-finetuning-esm2.html  objects.inv  parallelism-fw.html  pre-reqs.html  preprocessing-bcp-training-esm2nv.html  releasenotes-fw.html  searchindex.js  sitemap.xml
1.10.1/: access-startup.html  bibliography-fw.html  bionemo-fw-for-model-training-fw.html  blog.html  contents.html  data-module-fw.html  deep-dive-esm1-pytriton-inference.html  dwnstr-task-validation.html  faq-fw.html  genindex.html  hyperparameters-fw.html  index.html  inference-triton-fw.html  initialization-guide.html  lora-finetuning-esm2.html  next-steps.html  objects.inv  parallelism-fw.html  pre-reqs.html  preprocessing-bcp-training-diffdock.html  preprocessing-bcp-training-esm2nv.html  quickstart-bcp.html  releasenotes-fw.html  search.html  searchindex.js  tutorial-list.html
2.0/: 404.html  index.html  objects.inv  sitemap.xml
2.1/: 404.html  index.html  objects.inv  sitemap.xml
2.2/: 404.html  index.html  objects.inv  sitemap.xml
2.3/: 404.html  index.html  objects.inv  sitemap.xml
2.4/: 404.html  index.html  objects.inv  sitemap.xml
2.5/: 404.html  index.html  objects.inv  sitemap.xml
bionemo/: __init__.py  core.py  package_info.py
docs/: README.md  mkdocs.yml
hydra_plugins/: default_config_searchpath_plugin.py  nemo_config_searchpath_plugin.py
latest/: sitemap.xml
scripts/: test_download_sources.py
search/: search_index.json
setup/: Dockerfile  Dockerfile.arm  build_wheels.sh  nemo-v-1.23-import_except_torch_amp_grad_scaler.patch  recompile_megatron_helper.sh  requirements-cve.txt  requirements-test.txt  requirements.txt  startup.sh
sub-packages/: conftest.py
sub-packages/bionemo-dnadl/: README.md  pyproject.toml
sub-packages/bionemo-dnadl/src/bionemo/dnadl/io/: dataset.py
sub-packages/bionemo-dnadl/src/bionemo/dnadl/tools/: genome_editing.py  genome_interval.py  vcf.py
sub-packages/bionemo-dnadl/tests/bionemo/dnadl/: conftest.py
sub-packages/bionemo-dnadl/tests/bionemo/dnadl/io/: test_dataset.py  test_dnadl_dataset.py
sub-packages/bionemo-dnadl/tests/bionemo/dnadl/tools/: test_genome_editing.py  test_vcf.py
sub-packages/bionemo-evo2/: README.md  pyproject.toml
sub-packages/bionemo-evo2/examples/: fine-tuning-tutorial.ipynb  zeroshot_brca1.ipynb
sub-packages/bionemo-evo2/notebooks/: brca1_zero_shot_compare_logits.ipynb  zeroshot_brca_create_comparison_data.ipynb
sub-packages/bionemo-evo2/src/bionemo/evo2/: README.md  __init__.py  test_mamba.py
sub-packages/bionemo-evo2/src/bionemo/evo2/data/: README.md  __init__.py  config.py  dataset.py  preprocess.py  tokenizer.py  transcript_extraction.py
sub-packages/bionemo-evo2/src/bionemo/evo2/data/resources/: phyla_kingdom_map.py
sub-packages/bionemo-evo2/src/bionemo/evo2/models/: __init__.py  mamba.py
sub-packages/bionemo-evo2/src/bionemo/evo2/run/: infer.py  predict.py  train.py
sub-packages/bionemo-evo2/src/bionemo/evo2/utils/: config.py  torch2nemo.py
sub-packages/bionemo-evo2/src/bionemo/evo2/utils/checkpoint/: README.md  convert_checkpoint_model_parallel_evo2.py  convert_zero3_to_zero1.py  params.py  torch2nemo.py  zero3_conversion_lib.py
sub-packages/bionemo-evo2/tests/: README.md
sub-packages/bionemo-evo2/tests/bionemo/: test_evo2.py  test_hyena_operators.py  test_inference.py
sub-packages/bionemo-evo2/tests/bionemo/evo2/: test_config.py  test_evo2.py  test_hyena_operators.py  test_mask_phylogenetic_tags.py
sub-packages/bionemo-evo2/tests/bionemo/evo2/data/: test_benchmark_phylo_tag_speed.py  test_preprocess.py  test_tokenizer.py
sub-packages/bionemo-evo2/tests/bionemo/evo2/data/test_datasets/: mmseqs_results_rep_seq_distinct_sample_sequences.fasta  test_promoters_uint8_distinct_byte-level_test.idx  test_promoters_uint8_distinct_byte-level_train.idx  test_promoters_uint8_distinct_byte-level_val.idx
sub-packages/bionemo-evo2/tests/bionemo/evo2/run/: test_infer.py  test_inference.py  test_predict.py  test_train.py
sub-packages/bionemo-evo2/tests/bionemo/run/: test_infer.py
sub-packages/bionemo-evo2/tests/config/: test_dataset_config.yaml  test_preproc_config.yaml
sub-packages/bionemo-fw/: pyproject.toml
sub-packages/bionemo-noodles/: pyproject.toml
sub-packages/bionemo-noodles/noodles_fasta_wrapper/: Cargo.toml  examples.rs
sub-packages/bionemo-noodles/noodles_fasta_wrapper/src/: lib.rs
sub-packages/bionemo-noodles/rust/src/: lib.rs
sub-packages/bionemo-noodles/src/bionemo/noodles/: nvfaidx.py
sub-packages/bionemo-noodles/tests/bionemo/noodles/data/: sample.fasta
tests/: _make_fake_uf50uf90.py  _test_esm2_uf90clustermapping_dataset.py  conftest.py  inference_shared_test_code.py  molecule_inference_shared_test_code.py  test_beam_search.py  test_build_typed_dataset.py  test_callbacks.py  test_clustermap_dataset.py  test_cu_import.py  test_data_utils.py  test_dgl_depenedency.py  (+47 more)
(+1901 files in other folders)
