[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-evo2"
readme = "README.md"
description = "Library containing data preprocessing, training, and inference tooling for Evo2."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "bionemo-noodles"
]

[project.scripts]
infer_evo2 = "bionemo.evo2.run.infer:main"
train_evo2 = "bionemo.evo2.run.train:main"
preprocess_evo2 = "bionemo.evo2.data.preprocess:main"
splice_evo2 = "bionemo.evo2.data.transcript_extraction:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.uv]
cache-keys = [{ git = true }]
